src/test/deca/context/invalid/created/decl_class/double_met.deca
// Description :
//    met declarée deux fois
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(2.5) L’identificateur a est déjà défini

class A{
void meth(){}
int meth(){}
}